--- a/project-1/style.css
+++ b/project-1/style.css
@@ -75,7 +75,7 @@ main {
 
 .main {
     width: 100%;
-    height: 100vh; 
+    height: 100vh; /*main page bug*/
     background-color: #333030;
 }
 
