--- a/project-1/style.css
+++ b/project-1/style.css
@@ -44,6 +44,10 @@ nav ul {
 
 nav ul li {
     margin: 0 25px;
+
+}
+nav ul li a:hover{
+    color: rgb(206, 192, 192);
 }
 
 nav ul li a {
@@ -207,6 +211,7 @@ main p {
     color: white;
     padding: 20px; 
     border-radius: 10px; 
+    cursor: pointer;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
 }
@@ -334,6 +339,7 @@ main p {
     border: 2px solid;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
     margin-top: 40px;
+    cursor: pointer;
 }
 .crdd .crdd1:hover, 
 .crdd .crdd2:hover, 
@@ -446,8 +452,14 @@ main p {
     border-radius: 10px; 
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
     margin-top: 40px;
+    cursor: pointer;
+    transition: transform 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease;
 }
-
+.cr1:hover{
+  transform: translateY(-5px);
+  border-color: #3b82f6;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
 .cr  img{
     width: 30px;
     padding-bottom: 20px;
@@ -479,7 +491,14 @@ main p {
     align-items: center; 
     padding: 8px;
     background-color: #eeeeee; 
-    height: 200px; 
+    height: 200px;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease, transform 0.3s ease; 
+
+  }
+  .imgs div:hover{
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: translateY(-3px);
   }
   .imgs img {
     display: flex;
@@ -559,4 +578,9 @@ main p {
     padding: 9px;
     border-radius: 10px;
     width: 565px;
+    cursor: pointer;
+}
+.form button:hover{
+    color: green;
+    background-color: #f4fcab;
 }
