--- a/project-1/style.css
+++ b/project-1/style.css
@@ -244,6 +244,7 @@ main p {
     font-size: 16px;
     margin: 5px 0; 
     padding-left: 20px;
+    text-align: left;
 }
 
 .services button{
@@ -542,6 +543,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 .formsection .call h3{
     margin-left: 20px;
     color: white;
+    text-align: left;
     
 }
 .formsection .input-group{
